# apl-interpreter

./: .gitignore  Makefile  README.md  apl-interpreter.cabal  glyphs.txt
src/: Dfns.hs  Eval.hs  Exceptions.hs  Functions.hs  Functions.hs-boot  GlyphCompletion.hs  Glyphs.hs  GrammarTree.hs  IdMap.hs  Lex.hs  Main.hs  Main.hs-boot  Namespace.hs  Operators.hs  Parse.hs  Parse.hs-boot  PrettyPrint.hs  QuadNames.hs  Util.hs
test/: add_array_literals  array_literal  basic_assignment  combinators  comments  deeply_nested_parens  dfns_dops  exec_format  float_literals  function_tree  general_fns  general_ops  index  index_err  index_err_oracle  iota  misc_err  misc_err_oracle  modified_assignment  multi_expr_line  numeric_fns  pretty_print  pretty_print_oracle  quad_gets  rand  run_tests.sh  scan_reduce  selective_assignment  shape  simple_fns  subscript
