cabal-version:        2.4
name:                 apl-interpreter
version:              0.1.0.0

synopsis:             A REPL for APL on the command-line

author:               Lucas Scharenbroch
maintainer:           lucasscharenbroch@gmail.com

executable ai
    main-is:          Main.hs
    other-modules:    Eval, Exceptions, Functions, GlyphCompletion, Glyphs,
                      GrammarTree, Lex, Operators, Parse, PrettyPrint, QuadNames, Util
    build-depends:    base >=4.17.2.1,
                      haskeline >=0.8.2.1,
                      pcre-light >=0.4.1.2,
                      utf8-string >=1.0.2,
                      array >=0.5.4.0,
                      containers >=0.6.7,
                      mtl >=2.2.2,
                      transformers >=0.5.6.2,
                      random >=1.2.1.2,
    hs-source-dirs:   src
    default-language: Haskell2010
